--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Welcome to the Web Server</title></head><body><h1>Welcome to the Web Server!</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to the Web Server</title>
+  </head>
+  <body>
+    <h1>
+      Welcome to the Web Server!
+    </h1>
+  </body>
+</html>
